--- a/index.html
+++ b/index.html
@@ -3,8 +3,43 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <!-- Mobile-friendly -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>(0x)DigiFi</title>
+
+    <!-- SEO -->
+    <title>0xDreams | Web3 Tools, Market Analytics & Digital Business Solutions</title>
+    <meta name="description"
+        content="0xDreams provides Web3 tools, crypto analytics, business strategies, e-commerce integration, passive income systems, and digital marketing powered by AI.">
+    <meta name="keywords"
+        content="Web3, Crypto, Solana, Business Strategy, E-commerce, AI Marketing, Passive Income, Trading, Investments">
+    <link rel="canonical" href="https://flapjacode.github.io/0xDreams/">
+
+    <!-- OpenGraph (social) -->
+    <meta property="og:title" content="0xDreams | Web3 Tools & Crypto Insights">
+    <meta property="og:description"
+        content="Unlock business growth with Web3 strategies, AI tools, crypto analytics, e-commerce, and digital marketing.">
+    <meta property="og:image" content="https://i.ibb.co/WcgcdKZ/0xDreams.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://flapjacode.github.io/0xDreams/">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Organization",
+      "name": "0xDreams",
+      "url": "https://flapjacode.github.io/0xDreams/",
+      "logo": "https://i.ibb.co/WcgcdKZ/0xDreams.png",
+      "sameAs": [
+        "https://twitter.com/flapjacks4all",
+        "https://soundcloud.com/admiror"
+      ]
+    }
+    </script>
 
     <!-- External Styles -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -12,9 +47,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 
-    <!-- Jupiter Terminal -->
-    <script src="https://terminal.jup.ag/main-v2.js"></script>
+    <!-- Defer Jupiter (performance upgrade) -->
+    <script defer src="https://terminal.jup.ag/main-v2.js"></script>
+
+    <!-- Performance preconnect -->
+<link rel="preconnect" href="https://s3.tradingview.com">
+<link rel="preconnect" href="https://terminal.jup.ag">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+
 </head>
+
 
 <body id="myPage">
 
@@ -74,7 +116,7 @@
     <!-- Header Image -->
     <div class="w3-display-container w3-animate-opacity header-image">
         <a href="https://ibb.co/CnhnX0g">
-            <img src="https://i.ibb.co/WcgcdKZ/0xDreams.png" alt="0xDreams">
+            <img src="https://i.ibb.co/WcgcdKZ/0xDreams.png" alt="0xDreams" loading="lazy">
         </a>
         <div class="w3-container w3-display-bottomleft w3-margin-bottom">
             <button class="w3-button w3-xlarge w3-theme w3-hover-teal"
@@ -138,33 +180,15 @@
 
     <!-- TEAM SECTION -->
     <div class="w3-container w3-padding-64 w3-center" id="team">
-        <h2>OUR TEAM</h2>
-        <p>Contact to join dev team:</p>
-
-        <div class="team-row">
-            <div class="team-card">
-                <img src="https://i.ibb.co/xFD4SVL/OIP-3.jpg" class="team-img">
-                <h3>Radical0xEd</h3>
-                <p>Web Designer & Programmer</p>
-            </div>
+        <h2>About</h2>
+        <p>Contact to join team:</p>
 
             <div class="team-card">
-                <img src="https://i.ibb.co/Zh25NyK/20230507-153627.jpg" class="team-img">
-                <h3>Marley D.</h3>
-                <p>Support & Innovations</p>
-            </div>
-
-            <div class="team-card">
-                <img src="https://i.ibb.co/fMGPt0V/20210503-161711.jpg" class="team-img">
+                <img src="https://i.ibb.co/fMGPt0V/20210503-161711.jpg" class="team-img" loading="lazy">
                 <h3>Matt Shannon</h3>
                 <p>Lead Analyst & Advisor</p>
             </div>
 
-            <div class="team-card">
-                <img src="https://i.ibb.co/bgZ6SWS/R.jpg" class="team-img">
-                <h3>Zer0</h3>
-                <p>Bug Tester / Online Ops</p>
-            </div>
         </div>
     </div>
 
