--- a/index.html
+++ b/index.html
@@ -327,6 +327,17 @@
 
     <!-- External JS -->
     <script src="script.js"></script>
+    <div class="swap-box">
+  <h2>Swap Tokens</h2>
+  <jupiter-terminal
+        endpoint="https://rpc.ankr.com/solana"
+        theme="dark"
+        display-mode="widget"
+        strict-token-list="false">
+  </jupiter-terminal>
+</div>
+<script src="https://terminal.jup.ag/main-v2.js"></script>
+
 
 </body>
 </html>
