--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
         </div>
     </div>
 
+    <button id="wallet-btn" class="w3-button w3-green w3-right">Connect Wallet</button>
+
     <!-- Header Image -->
     <div class="w3-display-container w3-animate-opacity header-image">
         <a href="https://ibb.co/CnhnX0g">
@@ -126,32 +128,30 @@
         </div>
     </div>
 
-    <!-- TradingView Ticker -->
-    <div class="tradingview-widget-container">
-        <div class="tradingview-widget-container__widget"></div>
-        <script type="text/javascript"
-            src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
-        {
-           "symbols"; [
-               {"proName": "BITSTAMP:BTCUSD", "title": "Bitcoin"},
-               {"proName": "BITSTAMP:ETHUSD", "title": "Ethereum"},
-               {"description": "Solana", "proName": "BINANCE:SOLUSDT"},
-               {"description": "PEPE", "proName": "BINANCE:PEPEUSDT"},
-               {"description": "Polygon", "proName": "COINBASE:MATICUSD"},
-               {"description": "Hedera", "proName": "BYBIT:HBARUSDT"},
-               {"description": "Bonk", "proName": "BYBIT:BONKUSDT"},
-               {"description": "RATS", "proName": "MEXC:RATSUSDT"},
-               {"description": "FIL EUR", "proName": "COINBASE:FILEUR"},
-               {"description": "Shib EUR", "proName": "BITSTAMP:SHIBEUR"},
-               {"description": "DYDX", "proName": "BINGX:DYDXUSDT.PS"},
-               {"description": "SLERF", "proName": "BINGX:SLERFUSDT.P"}
-           ],
-           "showSymbolLogo"; true,
-           "displayMode"; "adaptive",
-           "colorTheme"; "dark",
-           "locale"; "en"
-        }
-        </script>
+<script type="text/javascript"
+    src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+{
+   "symbols": [
+       {"proName": "BITSTAMP:BTCUSD", "title": "Bitcoin"},
+       {"proName": "BITSTAMP:ETHUSD", "title": "Ethereum"},
+       {"description": "Solana", "proName": "BINANCE:SOLUSDT"},
+       {"description": "PEPE", "proName": "BINANCE:PEPEUSDT"},
+       {"description": "Polygon", "proName": "COINBASE:MATICUSD"},
+       {"description": "Hedera", "proName": "BYBIT:HBARUSDT"},
+       {"description": "Bonk", "proName": "BYBIT:BONKUSDT"},
+       {"description": "RATS", "proName": "MEXC:RATSUSDT"},
+       {"description": "FIL EUR", "proName": "COINBASE:FILEUR"},
+       {"description": "Shib EUR", "proName": "BITSTAMP:SHIBEUR"},
+       {"description": "DYDX", "proName": "BINGX:DYDXUSDT.PS"},
+       {"description": "SLERF", "proName": "BINGX:SLERFUSDT.P"}
+   ],
+   "showSymbolLogo": true,
+   "displayMode": "adaptive",
+   "colorTheme": "dark",
+   "locale": "en"
+}
+</script>
+
     </div>
 
     <!-- Modal -->
@@ -190,7 +190,7 @@
             </div>
 
         </div>
-    </div>
+   
 
     <!-- Quicklinks -->
     <div class="w3-container quicklink-container">
@@ -210,28 +210,25 @@
             </div>
 
             <div class="goals-right">
-                <!-- TradingView Advanced Chart -->
-                <div class="tradingview-widget-container full-size-widget">
-                    <div class="tradingview-widget-container__widget"></div>
+               <script type="text/javascript"
+    src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
+{
+    "autosize": true,
+    "symbol": "COINBASE:BTCUSD",
+    "interval": "120",
+    "timezone": "Etc/UTC",
+    "theme": "dark",
+    "style": "1",
+    "locale": "en",
+    "allow_symbol_change": true,
+    "studies": [
+        "STD;Donchian_Channels",
+        "STD;Ichimoku%1Cloud",
+        "STD;MACD"
+    ]
+}
+</script>
 
-                    <script type="text/javascript"
-                        src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
-                    {
-                        "autosize"; true,
-                        "symbol"; "COINBASE:BTCUSD",
-                        "interval"; "120",
-                        "timezone"; "Etc/UTC",
-                        "theme"; "dark",
-                        "style"; "1",
-                        "locale"; "en",
-                        "allow_symbol_change"; true,
-                        "studies"; [
-                            "STD;Donchian_Channels",
-                            "STD;Ichimoku%1Cloud",
-                            "STD;MACD"
-                        ]
-                    }
-                    </script>
                 </div>
             </div>
         </div>
@@ -249,16 +246,17 @@
     <div class="tradingview-widget-container">
         <div class="tradingview-widget-container__widget"></div>
         <script type="text/javascript"
-            src="https://s3.tradingview.com/external-embedding/embed-widget-timeline.js" async>
-        {
-            "feedMode"; "all_symbols",
-            "colorTheme"; "dark",
-            "displayMode"; "adaptive",
-            "locale"; "en",
-            "width"; "100%",
-            "height"; "100%"
-        }
-        </script>
+    src="https://s3.tradingview.com/external-embedding/embed-widget-timeline.js" async>
+{
+    "feedMode": "all_symbols",
+    "colorTheme": "dark",
+    "displayMode": "adaptive",
+    "locale": "en",
+    "width": "100%",
+    "height": "100%"
+}
+</script>
+
     </div>
 
     <!-- Pricing -->
@@ -324,20 +322,41 @@
             </a>
         </div>
     </footer>
+    <script>
+document.addEventListener("DOMContentLoaded", async () => {
+
+    const { WalletsModal } = window.JupiterWallets;
+
+    const walletsModal = new WalletsModal({
+        onConnect: (publicKey) => {
+            document.getElementById("wallet-btn").innerText = 
+                publicKey.toString().slice(0, 4) + "..." + publicKey.toString().slice(-4);
+        }
+    });
+
+    document.getElementById("wallet-btn").onclick = () => {
+        walletsModal.open();
+    };
+
+});
+</script>
+
 
     <!-- External JS -->
-    <script src="script.js"></script>
+    
     <div class="swap-box">
   <h2>Swap Tokens</h2>
   <jupiter-terminal
-        endpoint="https://rpc.ankr.com/solana"
-        theme="dark"
-        display-mode="widget"
-        strict-token-list="false">
-  </jupiter-terminal>
+    endpoint="https://rpc.ankr.com/solana"
+    integrated-wallet="true"
+    theme="dark"
+    display-mode="widget"
+    platform-fee-bps="0"
+    strict-token-list="false">
+</jupiter-terminal>
+
 </div>
 
-<script src="https://terminal.jup.ag/main-v2.js"></script>
 <script src="https://terminal.jup.ag/wallets-v2.js"></script>
 
 <div class="balances-box">
@@ -368,6 +387,7 @@
     <p id="swap-result"></p>
 </div>
 
+<script src="script.js"></script>
 
 </body>
 </html>
